--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Projects</h1>
-<a href="/roleplay-chatbot-generator.html">Roleplay generator</a>
+<a href="./roleplay-chatbot-generator.html">Roleplay generator</a>
